# owockibot-sdk

./: README.md  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  setup.py  tsconfig.json
owockibot/: __init__.py  client.py  exceptions.py  filters.py  models.py  utils.py
src/: client.ts  index.ts  types.ts
src/__tests__/: client.test.ts
src/examples/: advanced.ts  basic.ts
tests/: conftest.py  test_models.py
